--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.github.MrNtlu:Toastie:0.1.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
